--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t jonathanhoward/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true jonathanhoward/react-test npm test -- --converage
+  - docker run -e CI=true jonathanhoward/react-test npm test -- --coverage
 
 after_success:
   - docker build -t jonathanhoward/multi-client ./client
