--- a/client/package.json
+++ b/client/package.json
@@ -17,13 +17,9 @@
   },
   "browserslist": {
     "production": [
-      > 0.5%,
-      last 2 versions,
-      Firefox ESR,
-      not ie <= 10,
-      not ie_mob <= 10,
-      not bb <= 10,
-      not op_mob <= 12.1
+     ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
     "development": [
       "last 1 chrome version",
