--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   "browserslist": {
     "production": [
      ">0.2%",
-      "not dead",
+      "last 2 versions",
       "not op_mini all"
     ],
     "development": [
